@@ -708,3 +708,22 @@ function handleTextAreaFontFamily(eid,tid) {
 	setTextAreaCookie(eid);
 	return true;
 }
+function startClock(eid,fmt,timeout) {
+	// %H = 00-23; %I = 01-12; %k = 0-23; %l = 1-12
+	// %M = 00-59; %S = 0-60
+	function addzero(v) {
+		return v<10 ? "0"+v : v;
+	}
+	var e = document.getElementById(eid);
+	if (!e) return;
+	if (!fmt) fmt="%I:%M:%S";
+	if (!timeout) timeout = 1000;
+	var d = new Date();
+	var s = fmt;
+	s = s.replace(/\%(H|k)/, addzero(d.getHours()));
+	s = s.replace(/\%(I|l)/, addzero(d.getHours() % 12 == 0 ? 12 : d.getHours() % 12) );
+	s = s.replace(/\%M/, addzero(d.getMinutes()));
+	s = s.replace(/\%S/, addzero(d.getSeconds()));
+	e.innerHTML = s;
+	window.setTimeout("startClock('"+eid+"','"+fmt+"','"+timeout+"')", timeout);
+}
