@@ -181,6 +181,8 @@ up                             "Eine Ebene höher &uarr;"
 upload                         "Datei(en) Hochladen"
 uptitle                        "Eine Ordnerebene höher gehen"
 user                           "Benutzer:"
+varnowformat                   "%A, %d. %B %Y"
+vartimeformat                 "%H:%M:%S"
 viewoptions                    "Ansicht"
 writeable                      "w"
 zip                            "ZIP Archiv Upload/Download"
