@@ -170,6 +170,8 @@ up                             "Remonter &uarr;"
 upload                         "Déargement de fichiers"
 uptitle                        "Remonter d'un niveau de rértoire"
 user                           "Utilisateur: "
+varnowformat                   "%A %d %B %Y"
+vartimeformat                 "%H:%M:%S"
 webdavfolderisfiltered         ""
 writeable                      "w"
 zip                            "Archive ZIP Déargement/téchargement"
